iac/template.yaml
Resources:
  stratoshellvpc874DC03F:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: stratoshell-network-stack/stratoshell-vpc
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/Resource
  stratoshellvpcPublicSubnet1Subnet568720F0:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/19
      VpcId:
        Ref: stratoshellvpc874DC03F
      AvailabilityZone: us-east-2a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: stratoshell-network-stack/stratoshell-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/PublicSubnet1/Subnet
  stratoshellvpcPublicSubnet1RouteTable51ED88CE:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: stratoshellvpc874DC03F
      Tags:
        - Key: Name
          Value: stratoshell-network-stack/stratoshell-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/PublicSubnet1/RouteTable
  stratoshellvpcPublicSubnet1RouteTableAssociation18EE71BE:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: stratoshellvpcPublicSubnet1RouteTable51ED88CE
      SubnetId:
        Ref: stratoshellvpcPublicSubnet1Subnet568720F0
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/PublicSubnet1/RouteTableAssociation
  stratoshellvpcPublicSubnet1DefaultRouteA41DE356:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: stratoshellvpcPublicSubnet1RouteTable51ED88CE
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: stratoshellvpcIGW4EA6A065
    DependsOn:
      - stratoshellvpcVPCGW42B3A3C3
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/PublicSubnet1/DefaultRoute
  stratoshellvpcPublicSubnet2Subnet13893019:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.32.0/19
      VpcId:
        Ref: stratoshellvpc874DC03F
      AvailabilityZone: us-east-2b
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: stratoshell-network-stack/stratoshell-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/PublicSubnet2/Subnet
  stratoshellvpcPublicSubnet2RouteTable273D1D25:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: stratoshellvpc874DC03F
      Tags:
        - Key: Name
          Value: stratoshell-network-stack/stratoshell-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/PublicSubnet2/RouteTable
  stratoshellvpcPublicSubnet2RouteTableAssociationA857DC42:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: stratoshellvpcPublicSubnet2RouteTable273D1D25
      SubnetId:
        Ref: stratoshellvpcPublicSubnet2Subnet13893019
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/PublicSubnet2/RouteTableAssociation
  stratoshellvpcPublicSubnet2DefaultRoute5C8F7190:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: stratoshellvpcPublicSubnet2RouteTable273D1D25
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: stratoshellvpcIGW4EA6A065
    DependsOn:
      - stratoshellvpcVPCGW42B3A3C3
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/PublicSubnet2/DefaultRoute
  stratoshellvpcPublicSubnet3Subnet46F132E7:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/19
      VpcId:
        Ref: stratoshellvpc874DC03F
      AvailabilityZone: us-east-2c
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: stratoshell-network-stack/stratoshell-vpc/PublicSubnet3
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/PublicSubnet3/Subnet
  stratoshellvpcPublicSubnet3RouteTable3369E2F5:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: stratoshellvpc874DC03F
      Tags:
        - Key: Name
          Value: stratoshell-network-stack/stratoshell-vpc/PublicSubnet3
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/PublicSubnet3/RouteTable
  stratoshellvpcPublicSubnet3RouteTableAssociation1FA813AA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: stratoshellvpcPublicSubnet3RouteTable3369E2F5
      SubnetId:
        Ref: stratoshellvpcPublicSubnet3Subnet46F132E7
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/PublicSubnet3/RouteTableAssociation
  stratoshellvpcPublicSubnet3DefaultRouteF4C6DCF1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: stratoshellvpcPublicSubnet3RouteTable3369E2F5
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: stratoshellvpcIGW4EA6A065
    DependsOn:
      - stratoshellvpcVPCGW42B3A3C3
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/PublicSubnet3/DefaultRoute
  stratoshellvpcIsolatedSubnet1Subnet17E0496C:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.96.0/19
      VpcId:
        Ref: stratoshellvpc874DC03F
      AvailabilityZone: us-east-2a
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Isolated
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet1
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet1/Subnet
  stratoshellvpcIsolatedSubnet1RouteTableA24A7A0A:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: stratoshellvpc874DC03F
      Tags:
        - Key: Name
          Value: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet1
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet1/RouteTable
  stratoshellvpcIsolatedSubnet1RouteTableAssociationC66EE03C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: stratoshellvpcIsolatedSubnet1RouteTableA24A7A0A
      SubnetId:
        Ref: stratoshellvpcIsolatedSubnet1Subnet17E0496C
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet1/RouteTableAssociation
  stratoshellvpcIsolatedSubnet2Subnet5A920105:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/19
      VpcId:
        Ref: stratoshellvpc874DC03F
      AvailabilityZone: us-east-2b
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Isolated
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet2
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet2/Subnet
  stratoshellvpcIsolatedSubnet2RouteTableE27E0D4C:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: stratoshellvpc874DC03F
      Tags:
        - Key: Name
          Value: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet2
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet2/RouteTable
  stratoshellvpcIsolatedSubnet2RouteTableAssociation56AFAA3D:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: stratoshellvpcIsolatedSubnet2RouteTableE27E0D4C
      SubnetId:
        Ref: stratoshellvpcIsolatedSubnet2Subnet5A920105
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet2/RouteTableAssociation
  stratoshellvpcIsolatedSubnet3Subnet959867CB:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.160.0/19
      VpcId:
        Ref: stratoshellvpc874DC03F
      AvailabilityZone: us-east-2c
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Isolated
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet3
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet3/Subnet
  stratoshellvpcIsolatedSubnet3RouteTable8516ADB9:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: stratoshellvpc874DC03F
      Tags:
        - Key: Name
          Value: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet3
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet3/RouteTable
  stratoshellvpcIsolatedSubnet3RouteTableAssociationFA4F6EDD:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: stratoshellvpcIsolatedSubnet3RouteTable8516ADB9
      SubnetId:
        Ref: stratoshellvpcIsolatedSubnet3Subnet959867CB
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/IsolatedSubnet3/RouteTableAssociation
  stratoshellvpcIGW4EA6A065:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: stratoshell-network-stack/stratoshell-vpc
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/IGW
  stratoshellvpcVPCGW42B3A3C3:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: stratoshellvpc874DC03F
      InternetGatewayId:
        Ref: stratoshellvpcIGW4EA6A065
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-vpc/VPCGW
  stratoshellecrendpointSecurityGroupC923DA2E:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: stratoshell-network-stack/stratoshell-ecr-endpoint/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp:
            Fn::GetAtt:
              - stratoshellvpc874DC03F
              - CidrBlock
          Description:
            Fn::Join:
              - ""
              - - "from "
                - Fn::GetAtt:
                    - stratoshellvpc874DC03F
                    - CidrBlock
                - :443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Ref: stratoshellvpc874DC03F
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-ecr-endpoint/SecurityGroup/Resource
  stratoshellecrendpoint3CF70130:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: com.amazonaws.us-east-2.ecr.dkr
      VpcId:
        Ref: stratoshellvpc874DC03F
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - Fn::GetAtt:
            - stratoshellecrendpointSecurityGroupC923DA2E
            - GroupId
      SubnetIds:
        - Ref: stratoshellvpcIsolatedSubnet1Subnet17E0496C
        - Ref: stratoshellvpcIsolatedSubnet2Subnet5A920105
        - Ref: stratoshellvpcIsolatedSubnet3Subnet959867CB
      VpcEndpointType: Interface
    Metadata:
      aws:cdk:path: stratoshell-network-stack/stratoshell-ecr-endpoint/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/12OwQrCMAyGn8V7V52CdxERb2OTXaXNMoxu7WhTh4jvbp3Ogaf8+fhJvqVcyMVM9T6B6po0pOWjYAVXEdEJYSkfZQdiW5sy24os6IagCNogv9mUchsYj0o3OPGJbby3QIrJml9ZZI5uinG6cTCMLuZ9pL26f59+tw1Hq3OLhsXQqxVgNNuZqrMUYYEQHPF972zoBod/EG+N7afI0dvgYLAd81MYW6G8+PktXct0JdPZxRMlLhimFmX+mS+/apk4MgEAAA==
    Metadata:
      aws:cdk:path: stratoshell-network-stack/CDKMetadata/Default
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/base/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
